Hero-section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
     <div class="container">
     <div class="navbar">
         <div class="logo">
@@ -21,11 +22,26 @@
             </ul>
         </nav>
         <nav id="nav-right">
-            <input type="text" placeholder="Search your watch" id="search-space">
-            <button id="search-btn"><img src="images/search-icon.png" alt="search" height="10px"></button>
-            <button width="80px" id="cart">Cart <img src="images/cart-icon.png" alt="cart" height="10px"></button>
-            <button width="80pxf" id="profile">Profile <img src="images/profile-icon.png" alt="profile" height="10px"></button>
+            <input type="text" placeholder="   Search your favourite watch" id="search-space" class="nav-r">
+            <button width="80px" id="cart" class="nav-r">Cart <img src="images/cart-icon.png" alt="cart" height="10px"></button>
+            <button width="80pxf" id="profile" class="nav-r">Profile <img src="images/profile-icon.png" alt="profile" height="10px"></button>
         </nav>
+    </div>
+
+    <div class="hero">
+        <div class="hero-text">
+            <h1>Discover luxury watches</h1> <br>
+            <h2>From Rolex, Richard Mille & Omega<br>
+            All in one place.</h2><br>
+            <p>Crafted for those who value precision, power, and prestige. <br>
+            🛒 Shop now and own every second. <br>
+            <a href="" class="btn">Explore Collection</a>   <a href="" class="btn">Limited Editions</a>
+            </p>
+        </div>
+        <div class="hero-img">
+            <img src="images/hero-image.png" alt="Hero image">
+        </div>
+    </div>
     </div>
     </div>
    
