--- a/index.html
+++ b/index.html
@@ -5,36 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WristRizz</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/fontawesome.css">
 </head>
 <body>
     <div class="header">
-    <div class="container">
-    <div class="navbar">
+        <div class="navbar">
         <div class="logo">
             <img src="images/logo.png" alt="logo" width="125px">
         </div>
         <nav id="nav-menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#">Home<img src="images/Icons/arrow-down-sign-to-navigate.png" alt="down-arrow" ></a></li>
+                <li><a href="#">Categories<img src="images/Icons/arrow-down-sign-to-navigate.png" alt="down-arrow" ></a></li>
+                <li><a href="#">About<img src="images/Icons/arrow-down-sign-to-navigate.png" alt="down-arrow" ></a></li>
+                <li><a href="#">Contacts<img src="images/Icons/arrow-down-sign-to-navigate.png" alt="down-arrow" ></a></li>
             </ul>
         </nav>
         <nav id="nav-right">
-            <input type="text" placeholder="   Search your favourite watch" id="search-space" class="nav-r">
-            <button width="80px" id="cart" class="nav-r">Cart <img src="images/cart-icon.png" alt="cart" height="10px"></button>
+            <input type="text" placeholder="   Search your favourite watch..." id="search-space" class="nav-r">
+            <button width="80px" id="cart" class="nav-r">Cart <img src="images/cart-icon.png" alt="cart"></button>
             <button width="80pxf" id="profile" class="nav-r">Profile <img src="images/profile-icon.png" alt="profile" height="10px"></button>
         </nav>
     </div>
-
+    <div class="container">
     <div class="hero">
         <div class="hero-text">
             <h1>Discover luxury watches</h1> <br>
             <h2>From Rolex, Richard Mille & Omega<br>
             All in one place.</h2><br>
             <p>Crafted for those who value precision, power, and prestige. <br>
-            🛒 Shop now and own every second. <br>
+            Shop now and own every second. <br>
             <a href="" class="btn">Explore Collection</a>   <a href="" class="btn">Limited Editions</a>
             </p>
         </div>
@@ -44,6 +48,254 @@
     </div>
     </div>
     </div>
-   
+
+    <!-- Limited Edition -->
+     <div class="limited">
+        <h2> Limited Editions: <hr></h2>
+        <div class="lm-rows">
+            <div class="lm-colm">
+                <img src="images/RM/rm1.jpg" alt="RM-1">
+            </div>
+            <div class="lm-colm">
+                <img src="images/Omega/omega2.avif" alt="Omega-2">
+            </div>
+            <div class="lm-colm">
+                <img src="images/Rolex/rolex4.jpg" alt="Rolex4">
+            </div>
+        </div>
+     </div>
+
+    <div class="products">
+        <h2> Products: <hr></h2>
+        <div class="item">
+            <h3>ROLEX</h3>
+            <div class="p-rows">
+            <div class="p-colm">
+                <img src="images/Rolex/rolex1.jpg" alt="Rolex-1">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+                
+            </div>
+            <div class="p-colm">
+                <img src="images/Rolex/Rolex2.jpg" alt="Rolex-2">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            <div class="p-colm">
+                <img src="images/Rolex/rolex3.jpg" alt="Rolex-3">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            <div class="p-colm">
+                <img src="images/Rolex/rolex6.jpg" alt="Rolex-6">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            </div>
+        </div>
+        <div class="item">
+            <h3>OMEGA</h3>
+            <div class="p-rows">
+            <div class="p-colm">
+                <img src="images/Omega/omega1.avif" alt="omega-1">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            <div class="p-colm">
+                <img src="images/Omega/omega3.avif" alt="Omega-3">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            <div class="p-colm">
+                <img src="images/Omega/omega4.avif" alt="Omega-5">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            <div class="p-colm">
+                <img src="images/Omega/omega5.avif" alt="Omega-5">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            </div>
+        </div>
+        <div class="item">
+            <h3>RICHARD MILLE</h3>
+            <div class="p-rows">
+            <div class="p-colm">
+                <img src="images/RM/rm2.jpg" alt="RM-2">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            <div class="p-colm">
+                <img src="images/RM/rm3.jpg" alt="RM-3">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            <div class="p-colm">
+                <img src="images/RM/rm4.jpg" alt="RM-4">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            <div class="p-colm">
+                <img src="images/RM/rm5.jpg" alt="RM-5">
+                <div class="Discription">
+                    <h3>Land-Dweller</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                    <h4>Opening new horizons</h4>
+                    <h4>Price: <span class="old-price">$1,500</span> 
+                        <span class="discounted-price">$1,200</span> 
+                        <span class="discount">20% OFF</span></h4>
+                    <button class="btn">Buy now</button>
+                </div>
+            </div>
+            </div>
+        </div>
+     </div>
+     <footer class="footer">
+    <div class="footer-container">
+        <div class="footer-about">
+            <h3>About Us</h3>
+            <p>WristRizz is your destination for premium luxury watches from Rolex, Omega, Richard Mille and more. We deliver elegance, precision, and prestige in every tick.</p>
+        </div>
+        <div class="footer-links">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><a href="#">Terms & Conditions</a></li>
+            </ul>
+        </div>
+        <div class="footer-contact">
+            <h3>Contact Info</h3>
+            <p>Email: sumitmanjhi@wristrizz.com</p>
+            <p>Phone: +91 7633947500</p>
+        </div>
+        <div class="footer-social">
+            <h3>Follow Us</h3>
+            <a href="#">Instagram</a> | 
+            <a href="#">Facebook</a> | 
+            <a href="#">LinkedIn</a>
+        </div>
+    </div>
+    <div class="footer-cc">
+        <p>&copy; 2025 WristRizz. All rights reserved.</p>
+    </div>
+</footer>
 </body>
 </html>
